--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello World</title>
+	<title>Hello Beautiful World!</title>
 </head>
 <body>
 
+	<p>Hello Beautiful World!</p>
 
 </body>
 </html>
